@@ -733,6 +733,7 @@ define function, begin
 705,heroischasing,1,0         # If hero is chasing an NPC, return the NPC reference
 706,npcischasing,1,0          # If npc is chasing another NPC, return NPC reference
 707,maxmapid,0                # Return id number of the last map
+708,getslicelookupname,3,0,0,1 # Get the name of a lookup code (string id, code id, use default name)
 
 # Don't forget to update maxScriptCmdID in const.bi when adding new commands
 end
